--- a/index.html
+++ b/index.html
@@ -1,1 +1,212 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TARBIX Token Sale</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    :root {
+      --bg-light: #ffffff;
+      --bg-dark: #0b0b0b;
+      --text-light: #111111;
+      --text-dark: #eaeaea;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    body.light {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+    }
+
+    body.dark {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+    }
+
+    header {
+      background: url("assets/banner.jpg") center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 80px 20px;
+    }
+
+    header h1 {
+      font-size: 2.8rem;
+    }
+
+    nav {
+      padding: 10px;
+      text-align: right;
+    }
+
+    nav button, nav select {
+      margin-left: 8px;
+      padding: 6px;
+    }
+
+    section {
+      padding: 30px 15px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .wallet-input {
+      display: block;
+      margin: 20px auto;
+      padding: 10px;
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .paypal-section {
+      text-align: center;
+    }
+
+    .paypal-tier {
+      margin: 15px 0;
+    }
+
+    .nft-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .nft-card {
+      margin: 10px;
+      width: 200px;
+      background: #111;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .nft-card img {
+      width: 100%;
+      display: block;
+    }
+
+    .nft-card p {
+      margin: 0;
+      padding: 10px;
+      font-size: 0.9rem;
+      background: #222;
+      color: #f1f1f1;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      padding: 30px;
+    }
+
+    a {
+      color: #66ccff;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body class="light">
+
+  <nav>
+    <button onclick="toggleTheme()">🌓 Theme</button>
+    <select onchange="setLanguage(this.value)">
+      <option value="en">EN</option>
+      <option value="es">ES</option>
+      <option value="fr">FR</option>
+    </select>
+  </nav>
+
+  <header>
+    <h1 id="title">Welcome to the TARBIX Token Launch</h1>
+    <p id="tagline">The currency of symbolic reflection.</p>
+  </header>
+
+  <section>
+    <h2>🎥 Get Your XRPL Wallet (XUMM)</h2>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/o3eP1zaWwms"
+            title="XUMM Wallet Setup" frameborder="0" allowfullscreen></iframe>
+    <p><a href="https://xumm.app/" target="_blank">➡️ Click here to get the XUMM Wallet</a></p>
+  </section>
+
+  <section>
+    <h2>🪙 Buy TARBIX Tokens</h2>
+    <input type="text" id="walletAddress" class="wallet-input" placeholder="Your XRPL Wallet Address (starts with r...)">
+
+    <div class="paypal-section">
+      <div class="paypal-tier">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+          <input type="hidden" name="cmd" value="_xclick">
+          <input type="hidden" name="business" value="marketpulse.ai.llc@gmail.com">
+          <input type="hidden" name="currency_code" value="USD">
+          <input type="hidden" name="item_name" value="TARBIX Token Purchase - $5 Tier">
+          <input type="hidden" name="amount" value="5.00">
+          <input type="hidden" name="custom" id="paypalWallet">
+          <input type="submit" value="Buy $5 Tier">
+        </form>
+      </div>
+      <!-- You can copy this block and change "amount" and "item_name" for $10, $25, $50, $100, etc. -->
+    </div>
+  </section>
+
+  <section>
+    <h2>🎴 NFT Alpha: The Veil Cards</h2>
+    <div class="nft-grid">
+      <div class="nft-card">
+        <img src="assets/card1.png" alt="Origin">
+        <p>Card #1: Origin — $5 — 1,000 minted</p>
+      </div>
+      <div class="nft-card">
+        <img src="assets/card2.png" alt="Reflection">
+        <p>Card #2: Reflection — $5 — 1,000 minted</p>
+      </div>
+      <div class="nft-card">
+        <img src="assets/card3.png" alt="Consequence">
+        <p>Card #3: Consequence — $5 — 1,000 minted</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>📄 Documents & Disclosures</h2>
+    <ul>
+      <li><a href="docs/tarbix_coin_whitepaper.pdf" target="_blank">TARBIX Whitepaper</a></li>
+      <li><a href="docs/token_access_trust_utility_disclosure.pdf" target="_blank">Token Access Trust Disclosure</a></li>
+      <li><a href="docs/refund_logic_graduation_vault_overview.pdf" target="_blank">Refund Vault Overview</a></li>
+      <li><a href="docs/privacy_law_compliance_statement.pdf" target="_blank">Privacy Compliance Statement</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>Contact: <a href="mailto:verify@unshyft.com">verify@unshyft.com</a></p>
+    <p>© 2025 TARBIX / MarketPulse AI LLC / REFΛΞCT</p>
+  </footer>
+
+  <script>
+    function toggleTheme() {
+      document.body.classList.toggle('dark');
+      document.body.classList.toggle('light');
+    }
+
+    function setLanguage(lang) {
+      const text = {
+        en: { title: "Welcome to the TARBIX Token Launch", tagline: "The currency of symbolic reflection." },
+        es: { title: "Bienvenido al lanzamiento de TARBIX", tagline: "La moneda de la reflexión simbólica." },
+        fr: { title: "Bienvenue au lancement de TARBIX", tagline: "La monnaie de la réflexion symbolique." }
+      };
+      document.getElementById('title').innerText = text[lang].title;
+      document.getElementById('tagline').innerText = text[lang].tagline;
+    }
+
+    document.getElementById('walletAddress').addEventListener('input', function () {
+      document.getElementById('paypalWallet').value = this.value;
+    });
+  </script>
+
+</body>
+</html>
 
