--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       To buy TARBIX tokens directly:
       <ul>
         <li>Open the <strong>XUMM Wallet</strong> and connect to the DEX.</li>
-        <li>Search for: <code>TARBIX</code> (Token ID coming soon).</li>
+        <li>Search for: <code>TARBIX</code> (Token ID $TAR).</li>
         <li>Ensure you're trading on the correct network (XRPL Mainnet).</li>
         <li>If TARBIX doesn’t show up, add the token manually using the trustline instructions in the video.</li>
       </ul>
