--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <header>
     <h1 id="title">Welcome to the TARBIX Token Launch</h1>
-    <p id="tagline">The currency of symbolic reflection.</p>
+    <p id="tagline">Still Building</p>
   </header>
 
   <section>
