--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     function setLanguage(lang) {
       const text = {
-        en: { title: "Welcome to the TARBIX Token Launch", tagline: "The currency of symbolic reflection." },
+        en: { title: "Welcome to the TARBIX Token Launch", tagline: "still building." },
         es: { title: "Bienvenido al lanzamiento de TARBIX", tagline: "La moneda de la reflexión simbólica." },
         fr: { title: "Bienvenue au lancement de TARBIX", tagline: "La monnaie de la réflexion symbolique." }
       };
