--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TARBIX Token Sale</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>TARBIX Token Launch</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
       --bg-light: #ffffff;
@@ -16,68 +16,85 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       transition: background-color 0.3s, color 0.3s;
+      background: url("Page_background.png") fixed center center / cover no-repeat;
     }
 
     body.light {
-      background: url('Page_background.png') no-repeat top center;
-      background-size: cover;
       color: var(--text-light);
     }
 
     body.dark {
-      background: #0b0b0b;
       color: var(--text-dark);
-    }
-
-    header {
-      background: url('top_banner_center.png') no-repeat center top;
-      background-size: contain;
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 60px 20px;
-    }
-
-    @media (max-width: 768px) {
-      header {
-        background-size: 100% auto;
-        padding: 30px 15px;
-      }
-    }
-
-    header h1 {
-      font-size: 2.5rem;
     }
 
     nav {
       padding: 10px;
       text-align: right;
+      background: rgba(0, 0, 0, 0.5);
     }
 
     nav button, nav select {
       margin-left: 8px;
-      padding: 6px;
+      padding: 6px 10px;
+      font-weight: bold;
+    }
+
+    header {
+      background: url("top_banner_center.png") center top / contain no-repeat;
+      text-align: center;
+      padding: 120px 20px 60px;
+      background-size: contain;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        padding: 80px 10px 40px;
+        background-size: cover;
+      }
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      color: white;
+      text-shadow: 0 2px 5px #000;
     }
 
     section {
+      background: rgba(0, 0, 0, 0.65);
       padding: 30px 15px;
-      max-width: 800px;
-      margin: auto;
-      background: rgba(255,255,255,0.85);
-      border-radius: 10px;
-      margin-bottom: 30px;
+      margin: 15px auto;
+      max-width: 900px;
+      border-radius: 8px;
+      color: #f5f5f5;
+    }
+
+    h2 {
+      color: #ffcc33;
+    }
+
+    iframe {
+      width: 100%;
+      height: 315px;
+      border-radius: 8px;
+      border: none;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
     }
 
     .chart {
       width: 100%;
-      margin: 20px 0;
-      border-radius: 10px;
+      margin: 15px 0;
+      border-radius: 6px;
     }
 
     footer {
       text-align: center;
+      padding: 30px 20px;
       font-size: 0.9rem;
-      padding: 30px;
+      color: #aaa;
     }
 
     a {
@@ -86,13 +103,13 @@
     }
 
     .disclaimer {
-      margin-top: 40px;
+      margin-top: 20px;
       font-size: 0.8rem;
-      color: #888;
+      color: #bbb;
     }
   </style>
 </head>
-<body class="light">
+<body class="dark">
 
   <nav>
     <button onclick="toggleTheme()">🌓 Theme</button>
@@ -105,38 +122,35 @@
 
   <header>
     <h1 id="title">Welcome to the TARBIX Token Launch</h1>
-    <p id="tagline">Still Building</p>
   </header>
 
   <section>
     <h2>🎥 What is TARBIX?</h2>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/o3eP1zaWwms" title="TARBIX Overview" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/o3eP1zaWwms" title="TARBIX Overview" allowfullscreen></iframe>
   </section>
 
   <section>
     <h2>🧠 How to Setup a Wallet & Trade on the DEX</h2>
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/6Jo_3AXNXqs" title="XUMM Wallet + DEX Tutorial" frameborder="0" allowfullscreen></iframe>
-    <p style="margin-top: 15px;">
-      To buy TARBIX tokens directly:
-      <ul>
-        <li>Open the <strong>XUMM Wallet</strong> and connect to the DEX.</li>
-        <li>Search for: <code>TARBIX</code> (Token ID $TAR).</li>
-        <li>Ensure you're trading on the correct network (XRPL Mainnet).</li>
-        <li>If TARBIX doesn’t show up, add the token manually using the trustline instructions in the video.</li>
-      </ul>
-    </p>
+    <iframe src="https://www.youtube.com/embed/6Jo_3AXNXqs" title="XUMM Wallet + DEX Tutorial" allowfullscreen></iframe>
+    <p>To buy TARBIX tokens directly:</p>
+    <ul>
+      <li>Open the <strong>XUMM Wallet</strong> and connect to the DEX.</li>
+      <li>Search for: <code>TARBIX</code> (Token ID <strong>$TAR</strong>).</li>
+      <li>Ensure you're on the correct network (XRPL Mainnet).</li>
+      <li>If it doesn’t show up, use the trustline instructions from the video.</li>
+    </ul>
   </section>
 
   <section>
     <h2>📊 Market Charts & System Visuals</h2>
-    <img src="chart_1.png" class="chart" alt="Chart 1">
-    <img src="chart_2.png" class="chart" alt="Chart 2">
-    <img src="chart_3.png" class="chart" alt="Chart 3">
-    <img src="chart_4.png" class="chart" alt="Chart 4">
-    <img src="chart_5.png" class="chart" alt="Chart 5">
-    <img src="chart_6.png" class="chart" alt="Chart 6">
-    <img src="chart_7.png" class="chart" alt="Chart 7">
-    <img src="diagram.png" class="chart" alt="System Diagram">
+    <img src="chart_1.png" class="chart" alt="Chart 1" />
+    <img src="chart_2.png" class="chart" alt="Chart 2" />
+    <img src="chart_3.png" class="chart" alt="Chart 3" />
+    <img src="chart_4.png" class="chart" alt="Chart 4" />
+    <img src="chart_5.png" class="chart" alt="Chart 5" />
+    <img src="chart_6.png" class="chart" alt="Chart 6" />
+    <img src="chart_7.png" class="chart" alt="Chart 7" />
+    <img src="diagram.png" class="chart" alt="System Diagram" />
   </section>
 
   <section>
@@ -165,12 +179,11 @@
 
     function setLanguage(lang) {
       const text = {
-        en: { title: "Welcome to the TARBIX Token Launch", tagline: "still building." },
-        es: { title: "Bienvenido al lanzamiento de TARBIX", tagline: "La moneda de la reflexión simbólica." },
-        fr: { title: "Bienvenue au lancement de TARBIX", tagline: "La monnaie de la réflexion symbolique." }
+        en: { title: "Welcome to the TARBIX Token Launch" },
+        es: { title: "Bienvenido al lanzamiento de TARBIX" },
+        fr: { title: "Bienvenue au lancement de TARBIX" }
       };
       document.getElementById('title').innerText = text[lang].title;
-      document.getElementById('tagline').innerText = text[lang].tagline;
     }
   </script>
 
