--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>TARBIX Token Launch</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     :root {
       --bg-light: #ffffff;
@@ -42,13 +43,13 @@
     header {
       background: url("top_banner_center.png") center top / contain no-repeat;
       text-align: center;
-      padding: 120px 20px 60px;
+      padding: 180px 20px 100px;
       background-size: contain;
     }
 
     @media (max-width: 768px) {
       header {
-        padding: 80px 10px 40px;
+        padding: 140px 10px 80px;
         background-size: cover;
       }
     }
@@ -57,6 +58,7 @@
       font-size: 2.5rem;
       color: white;
       text-shadow: 0 2px 5px #000;
+      margin-top: 3rem;
     }
 
     section {
@@ -150,7 +152,7 @@
     <img src="chart_5.png" class="chart" alt="Chart 5" />
     <img src="chart_6.png" class="chart" alt="Chart 6" />
     <img src="chart_7.png" class="chart" alt="Chart 7" />
-    <img src="diagram.png" class="chart" alt="System Diagram" />
+    <img src="system_diagram.png" class="chart" alt="System Diagram" />
   </section>
 
   <section>
