--- a/index.html
+++ b/index.html
@@ -42,23 +42,32 @@
 
     header {
       background: url("top_banner_center.png") center top / contain no-repeat;
-      text-align: center;
-      padding: 180px 20px 100px;
       background-size: contain;
-    }
-
-    @media (max-width: 768px) {
-      header {
-        padding: 140px 10px 80px;
-        background-size: cover;
-      }
+      text-align: center;
+      padding-top: 180px;
+      padding-bottom: 60px;
+      position: relative;
     }
 
     header h1 {
       font-size: 2.5rem;
       color: white;
       text-shadow: 0 2px 5px #000;
-      margin-top: 3rem;
+      margin: 40px auto 0; /* Force distance under the banner */
+      max-width: 90%;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        padding-top: 140px;
+        padding-bottom: 40px;
+        background-size: cover;
+      }
+
+      header h1 {
+        margin-top: 60px;
+        font-size: 1.8rem;
+      }
     }
 
     section {
