--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-   <link rel="icon" href="favicon.ico" type="image/x-icon" /> 
   <title>TARBIX Token Launch</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
     :root {
       --bg-light: #ffffff;
@@ -42,18 +43,16 @@
 
     header {
       background: url("top_banner_center.png") center top / contain no-repeat;
-      background-size: contain;
       text-align: center;
-      padding-top: 180px;
-      padding-bottom: 60px;
-      position: relative;
+      padding-top: 200px;
+      padding-bottom: 80px;
     }
 
     header h1 {
       font-size: 2.5rem;
       color: white;
       text-shadow: 0 2px 5px #000;
-      margin: 40px auto 0; /* Force distance under the banner */
+      margin-top: 70px;
       max-width: 90%;
     }
 
@@ -154,7 +153,6 @@
 
   <section>
     <h2>📊 Market Charts & System Visuals</h2>
-    <img src="chart_1.png" class="chart" alt="Chart 1" />
     <img src="chart_2.png" class="chart" alt="Chart 2" />
     <img src="chart_3.png" class="chart" alt="Chart 3" />
     <img src="chart_4.png" class="chart" alt="Chart 4" />
