--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>TARBIX Token Launch</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
     :root {
       --bg-light: #ffffff;
@@ -43,28 +42,38 @@
 
     header {
       background: url("top_banner_center.png") center top / contain no-repeat;
+      background-repeat: no-repeat;
+      background-size: contain;
       text-align: center;
-      padding-top: 200px;
-      padding-bottom: 80px;
+      position: relative;
+      padding-top: 100px;
+      padding-bottom: 0;
+    }
+
+    .banner-spacer {
+      height: 250px; /* Adjust this number if needed */
     }
 
     header h1 {
       font-size: 2.5rem;
       color: white;
       text-shadow: 0 2px 5px #000;
-      margin-top: 70px;
-      max-width: 90%;
+      margin: 0 auto;
+      max-width: 100%;
+      padding-bottom: 20px;
     }
 
     @media (max-width: 768px) {
       header {
-        padding-top: 140px;
-        padding-bottom: 40px;
+        padding-top: 80px;
         background-size: cover;
       }
 
+      .banner-spacer {
+        height: 180px;
+      }
+
       header h1 {
-        margin-top: 60px;
         font-size: 1.8rem;
       }
     }
@@ -131,6 +140,7 @@
   </nav>
 
   <header>
+    <div class="banner-spacer"></div>
     <h1 id="title">Welcome to the TARBIX Token Launch</h1>
   </header>
 
